# injection-smt-analyzer

./: .gitignore  LICENSE  Makefile  README.md  STATUS.md  pyproject.toml
benchmarks/axios_ssrf/: README.md  clone.sh
benchmarks/django_cve_2020_9402/: README.md
benchmarks/pug_pretty/: README.md  clone.sh
benchmarks/undici_crlf/: README.md  run_check.sh  server.js
docs/: witness.schema.json
src/isa/: analyzer.py  cli.py  witness.py
src/isa/benchmarks/: axios_ssrf_proof.py  definitions.py  django_sql_proof.py  handlebars_lookup_proof.py  json5_proto_proof.py  laravel_ignition_proof.py  log4j_jndi_proof.py  nodemailer_sendmail_proof.py  pug_pretty_proof.py  spring4shell_proof.py  undici_crlf.py  undici_crlf_proof.py  yargs_parser_proof.py
src/isa/core/: __init__.py  config.py  parser.py  prover.py  taint.py
tests/: __init__.py  test_axios_ssrf.py  test_django_sql.py  test_handlebars_lookup.py  test_json5_proto.py  test_laravel_ignition.py  test_log4j_jndi.py  test_nodemailer_sendmail.py  test_pug_pretty.py  test_spring4shell.py  test_undici_crlf.py  test_yargs_parser.py
