[project]
name = "injection-smt-analyzer"
version = "0.1.0"
description = "Static analysis experiments for injection vulnerabilities using SMT and Z3"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Soumik Sarkar" }]
dependencies = [
  "z3-solver>=4.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-timeout>=2.0",
]

[project.scripts]
isa = "isa.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 120
addopts = "-v"
