[project]
name = "injection-smt-analyzer"
version = "0.2.0"
description = "Static analysis for injection vulnerabilities using SMT/Z3 and interprocedural taint analysis"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Soumik Sarkar" }]
dependencies = [
  "z3-solver>=4.12",
  "tree-sitter>=0.21",
  "tree-sitter-javascript>=0.21",
  "tree-sitter-python>=0.21",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-timeout>=2.0",
]

[project.scripts]
isa = "isa.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 180
addopts = "-v"
